# investra_backend

./: .env.example  .gitignore  .gitmodules  app.py  docker-compose.yml  main.py  package-lock.json  pyproject.toml  requirements.txt  signup.py  test.py
enve/: pyvenv.cfg
enve/Scripts/: activate  activate.bat
lstm/: predictions.py  test.ipynb  train.ipynb  utils.py
lstm/models/: AAPL_model.h5  AMZN_model.h5  GOOGL_model.h5  MSFT_model.h5  NVDA_model.h5  TSLA_model.h5
models/: create_tables.py  database.py  schemas.py
news_data/: google_data.json  microsoft_data.json  nvidia_data.json  tesla_data.json
routes/: TEST.py  api.py  comparison.py  portfolio.py  portfolioValues.json  reset.py  sign_up.py  simulation.py  stocks.py
routes/stocks/: news.py  predictions.py  stocks.py
routes/users/: user_portfolio.py
test/: db_test.py
utils/helpers/: data_retrieval.py  registration.py  stocks.py
utils/model/: model.py
