[project]
name = "investra-backend"
version = "0.1.0"
description = "Project for the backend of investra"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.1",
    "flask-bcrypt>=1.0.1",
    "flask-cors>=6.0.1",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "psycopg2>=2.9.10",
    "scikit-learn>=1.7.1",
    "sqlalchemy>=2.0.42",
    "tensorflow>=2.19.0",
    "torch>=2.7.1",
    "transformers>=4.54.1",
]
